Anexos sprint del 1-8. [#13]

--- a/doc/proyectdoc/bibliografiaAnexos.bib
+++ b/doc/proyectdoc/bibliografiaAnexos.bib
@@ -1,15 +1,163 @@
-@book{koza92,
-		author    = "Koza, John R.",
-		title     = "Genetic Programming: On the Programming of Computers by Means of Natural Selection",
-		publisher = "MIT Press",
-		year      = "1992"
+@misc{Java:htmlunit,
+	title = {{HtmlUnit – Welcome to HtmlUnit}},
+	url = {http://htmlunit.sourceforge.net/},
+	urldate = {2017-12-07}
 }
-
-
-@misc{ wiki:latex,
-       author = "Wikipedia",
-       title = "LaTeX --- Wikipedia{,} La enciclopedia libre",
-       year = "2015",
-       url = "https://es.wikipedia.org/w/index.php?title=LaTeX&oldid=84209252",
-       note = "[Internet; descargado 30-septiembre-2015]"
+@misc{Java:csv,
+	title = {{Commons CSV – Home}},
+	url = {https://commons.apache.org/proper/commons-csv/},
+	urldate = {2017-12-04}
+}
+@misc{Java:httpclient,
+	title = {{Biblioteca de clientes HTTP para Java | Desarrolladores de Google}},
+	url = {https://developers.google.com/api-client-library/java/google-http-java-client/},
+	urldate = {2017-12-04}
+}
+@misc{Java:log,
+	title = {{Log4j – Apache Log4j 2 - Apache Log4j 2}},
+	url = {https://logging.apache.org/log4j/2.x/},
+	urldate = {2017-12-04}
+}
+@misc{Web:worckbench,
+	title = {{MySQL :: MySQL Workbench}},
+	url = {https://www.mysql.com/products/workbench/},
+	urldate = {2017-12-04}
+}
+@misc{Web:sonarqube,
+	title = {{GII-17.1B-UBULog-1.0 - trona85}},
+	url = {https://sonarcloud.io/dashboard?id=GII-17.1B-UBULog-1.0},
+	urldate = {2017-12-03}
+}
+@misc{Web:texsturdio,
+	title = {{TeXstudio}},
+	url = {https://www.texstudio.org/},
+	urldate = {2017-12-03}
+}
+@misc{Web:eclipse,
+	title = {{Eclipse Neon}},
+	url = {https://www.eclipse.org/neon/},
+	urldate = {2017-12-03}
+}
+@misc{Web:zenhub,
+	title = {zenhub},
+	url = {https://www.zenhub.com/faq},
+	urldate = {2017-12-03}
+}
+@misc{Web:zenhub,
+	title = {zenhub},
+	url = {https://www.zenhub.com/faq},
+	urldate = {2017-12-03}
+}
+@misc{Web:eclipse,
+	author = {Web:eclipse},
+	title = {{Eclipse Neon}},
+	url = {https://www.eclipse.org/neon/},
+	urldate = {2017-12-03}
+}
+@misc{Web:texstudio,
+	title = {{TeXstudio}},
+	url = {https://www.texstudio.org/},
+	urldate = {2017-12-03}
+}
+@misc{Web:sonarqube,
+	title = {{SonarQube - GII-17.1B-UBULog-1.0 - Oscar Fernández}},
+	url = {https://sonarcloud.io/dashboard?id=GII-17.1B-UBULog-1.0},
+	urldate = {2017-12-03}
+}@misc{web:github,
+title = {{GitHub}},
+url = {https://github.com/trona85/GII-17.1B-UBULog-1.0},
+year = {2017}
+}
+@misc{web:git,
+	title = {{Git - Documentation}},
+	url = {https://git-scm.com/doc},
+	urldate = {2017-12-03}
+}
+@misc{javascript:table,
+	title = {{W3.CSS Filters}},
+	url = {https://www.w3schools.com/w3css/w3css{\_}filters.asp},
+	urldate = {2017-11-30}
+}
+@misc{java:csvparser,
+	title = {{CSVParser (Apache Commons CSV 1.5.1-SNAPSHOT API)}},
+	url = {https://commons.apache.org/proper/commons-csv/apidocs/org/apache/commons/csv/CSVParser.html{\#}parse-java.io.File-java.nio.charset.Charset-org.apache.commons.csv.CSVFormat-},
+	urldate = {2017-11-29}
+}
+@misc{web:mendeley,
+	title = {{Mendeley - aplicaci{\'{o}}n para guardar y exportar referencias a latex}},
+	url = {https://www.mendeley.com/}
+}
+@misc{,
+	title = {{git reflog | Tutorial para aprender git}},
+	url = {https://www.atlassian.com/git/tutorials/rewriting-history/git-reflog}
+}
+@misc{web:travis,
+	title = {{Travis CI - Integraci{\'{o}}n continua}},
+	url = {https://travis-ci.org/trona85/GII-17.1B-UBULog-1.0/}
+}
+@misc{OscarFernandezArmengol,
+	author = {{Oscar Fern{\'{a}}ndez Armengol}},
+	title = {{GII-17.1B-UBULog-1.0 - sonarqube - Ver calidad del c{\'{o}}digo}},
+	url = {https://sonarcloud.io/dashboard?id=GII-17.1B-UBULog-1.0}
+}
+@misc{web:sublime,
+	title = {{Sublime Text 3 - IDE para javaScript y html}},
+	url = {https://www.sublimetext.com/3}
+}
+@misc{,
+	title = {{instalacion Moodle3.3 - MoodleDocs}},
+	url = {https://docs.moodle.org/33/en/Installing{\_}Moodle}
+}
+@misc{moodle:webservice,
+	title = {{Funciones API web servic - MoodleDocs}},
+	url = {https://docs.moodle.org/dev/Web{\_}service{\_}API{\_}functions}
+}
+@misc{javascript:chart,
+	title = {{Libreria para generar los graficos - Chart.js {\textperiodcentered} Cocumentaci{\'{o}}n}},
+	url = {http://www.chartjs.org/docs/latest/}
+}
+@misc{java:calendar,
+	title = {{Calendar (Java Platform SE 8 )}},
+	url = {https://docs.oracle.com/javase/8/docs/api/java/util/Calendar.html{\#}set-int-int-}
+}
+@misc{java:filewriter,
+	title = {{FileWriter (Java Platform SE 8 )}},
+	url = {https://docs.oracle.com/javase/8/docs/api/java/io/FileWriter.html}
+}
+@misc{moolde:estadistic,
+	title = {{Moodle.org: Estad{\'{i}}sticas del uso de moodle}},
+	url = {https://moodle.net/stats/}
+}
+@book{LasaGomez2017,
+	abstract = {Índices},
+	author = {{Lasa Gómez}, Carmen and {Alvarez García}, Alonso and {de las Heras del Dedo}, Rafael},
+	isbn = {9788441538887},
+	publisher = {Anaya Multimedia},
+	title = {{Métodos ágiles Scrum, Kanban, Lean}},
+	year = {2017}
+}
+@book{Schwaber2004,
+	abstract = {Includes index. Foreword / Mike Cohn – Foreword / Mary Poppendieck – 1. Backdrop: The Science of Scrum – 2. New Management Responsibilities – 3. The ScrumMaster – 4. Bringing Order from Chaos – 5. The Product Owner – 6. Planning a Scrum Project – 7. Project Reporting – Keeping Everything Visible – 8. The Team – 9. Scaling Projects Using Scrum.},
+	author = {Schwaber, Ken.},
+	isbn = {073561993X},
+	pages = {163},
+	publisher = {Microsoft Press},
+	title = {{Agile project management with Scrum}},
+	year = {2004}
+}
+@book{,
+	title = {{Resumen del libro Scrum, de Jeff Sutherland}},
+	url = {https://www.leadersummaries.com/ver-resumen/scrum}
+}
+@article{,
+	journal = {Proyectos {\'{A}}giles},
+	title = {{Beneficios de Scrum}},
+	url = {http://www.proyectosagiles.org/beneficios-de-scrum},
+	year = {2008}
+}
+@article{art:mvc,
+	keywords = {wiki},
+	title = {{modelo vista controlador  — Wikipedia, La enciclopedia libre}},
+	url = {https://es.wikipedia.org/wiki/Modelo–vista–controlador},
+	year = {2017}
 }
