--- a/doc/proyectdoc/tex/A_Plan_proyecto.tex
+++ b/doc/proyectdoc/tex/A_Plan_proyecto.tex
@@ -47,7 +47,7 @@ Al inicio del proyecto se propuso utilizar una metodología ágil, en concreto S
 	10/10/17)}\label{sprint-1-0031017---101017}
 Este \emph{sprint} fue el comienzo del proyecto, aunque en reuniones previas se hablo con el tutor de las propuestas que tenia para la elección del proyecto, una vez el tutor (Raúl Marticorena Sanchez) acepto tutorizar al alumno (Oscar Fernández Armengol) se puedo empezar el desarrollo.
 
-Los objetivos fueron: preparación del entorno de desarrollo
+Los objetivos fueron:
 \begin{itemize}
 	\tightlist
 	\item
@@ -67,49 +67,169 @@ El \href{https://github.com/trona85/GII-17.1B-UBULog-1.0/milestone/1?closed=1}{S
 \subsection{Sprint 2 (10/10/17 -
 	17/10/17)}\label{sprint-2-101017---171017}
 
-El \href{https://github.com/trona85/GII-17.1B-UBULog-1.0/milestone/2?closed=1}{Sprint 2}
+Los objetivos fueron:
+\begin{itemize}
+	\tightlist
+	\item
+	Análisis de modelo de datos.
+	\item
+	Diagrama del modelo de datos.
+	\item
+	Parseo de documentos csv.	
+	
+\end{itemize}
+
+El \href{https://github.com/trona85/GII-17.1B-UBULog-1.0/milestone/2?closed=1}{Sprint 2} se estimo en 6 días de trabajo y se realizo en esos 6 días.
 
 \imagen{sprint2}{Sprint 2.}
 
 \subsection{Sprint 3 (17/10/17 -
 	24/10/17)}\label{sprint-3-171017---241017}
 
-El \href{https://github.com/trona85/GII-17.1B-UBULog-1.0/milestone/3?closed=1}{Sprint 3} 
+Los objetivos fueron:
+\begin{itemize}
+	\tightlist
+	\item
+	Integración continua con travis CI.
+	\item
+	Integración de  sonarqube.
+	\item
+	Recoger token con web service.	
+	\item
+	Recoger las asignaturas en las que imparte como profesor el usuario logeado.
+	\item
+	Referencia al usuario con su id en el parseo.
+	\item
+	Interfaz de usuario, primeros pasos.
+	\item
+	Limpieza del carpetas innecesarias en el repositorio.
+	
+\end{itemize}
+
+En este sprint, cabe destacar, la integración de Travis\cite{web:travis} y SonarQube \cite{web:sonarqube} para optimizar el tiempo de desarrollo, ya que delegamos en estas herramientas las pruebas y el análisis del código.
+
+El \href{https://github.com/trona85/GII-17.1B-UBULog-1.0/milestone/3?closed=1}{Sprint 3} se estimo en 7 días de trabajo y se realizo en esos 6 días.
 
 \imagen{sprint3}{Sprint 3.}
 
 \subsection{Sprint 4 (24/10/17 -
 	7/11/17)}\label{sprint-4-241017---071117}
 
-El \href{https://github.com/trona85/GII-17.1B-UBULog-1.0/milestone/4?closed=1}{Sprint 4} 
+Los objetivos fueron:
+\begin{itemize}
+	\tightlist
+	\item
+	Creación de usuarios ficticios.
+	\item
+	Análisis de datos.
+	\item
+	Eliminación de calificaciones.	
+	\item
+	Gestión de errores del documento.
+	
+\end{itemize}
+
+En este sprint, cabe destacar, la creación de usuarios ficticios, ya que hay usuarios que tienen interacciones en las asignaturas y nos interesa saber que están haciendo.
+
+El \href{https://github.com/trona85/GII-17.1B-UBULog-1.0/milestone/4?closed=1}{Sprint 4} se estimo en 5 días de trabajo y se realizo en esos 6 días.
 
 \imagen{sprint4}{Sprint 4.}
 
 \subsection{Sprint 5 (7/11/17 -
 	14/11/17)}\label{sprint-5-071117---141117}
 
-El \href{https://github.com/trona85/GII-17.1B-UBULog-1.0/milestone/5?closed=1}{Sprint 5} 
+Los objetivos fueron:
+\begin{itemize}
+	\tightlist
+	\item
+	Cambio de árbol de actividades.
+	\item
+	Construir los filtros de la interfaz.
+	\item
+	Creación de eventos	
+	\item
+	Interfaz nuevo diseño.
+	
+\end{itemize}
+
+En este sprint, cabe destacar, el nuevo diseño para la ventana principal, la antigua no era re-dimensionable y como había que implementar nuevos filtros y botones mas adelante, se opto por rehacerla.
+
+El \href{https://github.com/trona85/GII-17.1B-UBULog-1.0/milestone/5?closed=1}{Sprint 5} se estimo en 7 días de trabajo y se realizo en esos 6 días.
 
 \imagen{sprint5}{Sprint 5.}
 
 \subsection{Sprint 6 (14/11/17 -
 	22/11/17)}\label{sprint-6-141117---221117}
 
-El \href{https://github.com/trona85/GII-17.1B-UBULog-1.0/milestone/6?closed=1}{Sprint 6} 
+Los objetivos fueron:
+\begin{itemize}
+	\tightlist
+	\item
+	Generar gráficas.
+	\item
+	Mostrar gráficas con char.js \cite{javascript:chart}
+	\item
+	Creación de botón para generar las gráficas.	
+	\item
+	Instalar sublime text para la edición de html y javascript.
+	\item
+	Contar los logs para las gráficas.
+	
+\end{itemize}
+
+En este sprint, cabe destacar, la utilización de la librería chart para la generación de gráficos. Como el gráfico es cambiante dependiendo de los filtros pulsados, optamos en generar los html y javaScript en tiempo de ejecución.
+
+El \href{https://github.com/trona85/GII-17.1B-UBULog-1.0/milestone/6?closed=1}{Sprint 6} se estimo en 8 días de trabajo y se realizo en esos 7 días.
 
 \imagen{sprint6}{Sprint 6.}
 
 \subsection{Sprint 7 (22/11/17 -
 	29/11/17)}\label{sprint-7-221117---291117}
 
-El \href{https://github.com/trona85/GII-17.1B-UBULog-1.0/milestone/7?closed=1}{Sprint 7} 
+Los objetivos fueron:
+\begin{itemize}
+	\tightlist
+	\item
+	Integración de gráficas.
+	\item
+	Ordenar selección de eventos.
+	\item
+	imagen de usuario logeado.	
+	\item
+	UTF-8 para el gráfico.
+	
+\end{itemize}
+
+El \href{https://github.com/trona85/GII-17.1B-UBULog-1.0/milestone/7?closed=1}{Sprint 7} se estimo en 8 días de trabajo y se realizo en esos 5 días.
 
 \imagen{sprint7}{Sprint 7.}
 
 \subsection{Sprint 8 (28/11/17 -
 	06/12/17)}\label{sprint-8-281117---061217}
 
-El \href{https://github.com/trona85/GII-17.1B-UBULog-1.0/milestone/8?closed=1}{Sprint 8} 
+Los objetivos fueron:
+\begin{itemize}
+	\tightlist
+	\item
+	Cambio de parseo de log.
+	\item
+	Creación de tablas para los log en JavaScript.
+	\item
+	Muestreo de tabla en aplicación.
+	\item
+	Implementación de filtros en tabla
+	\item
+	Revisión de logs.
+	\item
+	Cambio de logo.
+	
+\end{itemize}
+
+En este sprint, cabe destacar, el cambio en el parseo, dado que había incongruencias entre los log de pruebas y los reales, para evitar eso, se implementa con la librería common-csv \cite{Java:csv}, con ella cogemos los datos correspondientes a la columna concreta y nos evitamos que en las pruebas el usuario sea "alumno apellido1 apellido2" y en producción sea "apellido1 apellido2, alumno".
+
+Por otra parte, también es interesante la implementación de las tablas, donde el usuario de la aplicación puede ver los log filtrados y desgranar aun mas los datos con filtros adicionales.
+
+El \href{https://github.com/trona85/GII-17.1B-UBULog-1.0/milestone/8?closed=1}{Sprint 8} se estimo en 10 días de trabajo y se realizo en esos 6 días.
 
 \imagen{sprint8}{Sprint 8.}
 
