--- a/doc/proyectdoc/bibliografia.bib
+++ b/doc/proyectdoc/bibliografia.bib
@@ -1,3 +1,10 @@
+@book{claudia,
+		title = {{Memoria tfg, 2017 }},
+	author    = "Martínez Herrero, Claudia"
+	title     = "Memoria tfg UBUGrades",
+	year      = "2017"
+}
+
 @misc{Java:htmlunit,
 	title = {{HtmlUnit – Welcome to HtmlUnit}},
 	url = {http://htmlunit.sourceforge.net/},
