--- a/doc/proyectdoc/memoria.tex
+++ b/doc/proyectdoc/memoria.tex
@@ -8,6 +8,9 @@
 \usepackage{lmodern} % Scalable font
 \usepackage{microtype}
 \usepackage{placeins}
+\usepackage{marvosym}
+
+\DeclareUnicodeCharacter{20AC}{\EUR{}}
 
 \RequirePackage{booktabs}
 \RequirePackage[table]{xcolor}
@@ -28,6 +31,10 @@
 
 % Párrafos
 \nonzeroparskip
+
+% Multi-page tables using
+\usepackage{longtable}
+\usepackage{tabularx}
 
 
 % Imagenes
