--- a/doc/proyectdoc/tex/1_Introduccion.tex
+++ b/doc/proyectdoc/tex/1_Introduccion.tex
@@ -44,7 +44,19 @@ La memoria sigue la siguiente estructura:
 
 Junto a la memoria se proporcionan los siguientes anexos:
 
-mETER LOS ANEXOS
+\begin{itemize}
+	\tightlist
+	\item
+	\textbf{Plan de proyecto:} análisis de la viabilidad del proyecto y su planificación.
+	\item
+	\textbf{Requisitos:} exposición de los requisitos que debería de tener nuestra aplicación.
+	\item
+	\textbf{Diseño:} exposición del diseño de la aplicación.
+	\item
+	\textbf{Manual del programador:} aspectos relevantes del código fuente.
+	\item
+	\textbf{Manual del usuario:} guía detallada del manejo de la aplicación.
+\end{itemize}
 
 \section{Materiales adjuntos}\label{materiales-adjuntos}
 
@@ -53,7 +65,7 @@ Los materiales que se adjuntan con la memoria son:
 \begin{itemize}
 	\tightlist
 	\item
-	Aplicación UBULog 1.0
+	Aplicación UBULog 1.1
 \end{itemize}
 
 Además, los siguientes recursos están accesibles a través de internet:
@@ -61,11 +73,11 @@ Además, los siguientes recursos están accesibles a través de internet:
 \begin{itemize}
 	\tightlist
 	\item
-	\href{https://github.com/trona85/GII-17.1B-UBULog-1.0}{Github del proyecto.}
+	\href{https://github.com/trona85/GII-17.1B-UBULog-1.0}{Código publico en el repositorio de Github.}
 	\item
-	\href{https://sonarcloud.io/dashboard?id=GII-17.1B-UBULog-1.0}{Sonarqube del proyecto.}
+	\href{https://sonarcloud.io/dashboard?id=GII-17.1B-UBULog-1.0}{Análisis de la calidad del código con Sonarqube.}
 	\item
-	\href{https://travis-ci.org/trona85/GII-17.1B-UBULog-1.0/}{Travis CI del proyecto.}
+	\href{https://travis-ci.org/trona85/GII-17.1B-UBULog-1.0/}{Integración continua del proyecto con Travis CI.}
 	
 \end{itemize}
 
