--- a/doc/proyectdoc/tex/3_Conceptos_teoricos.tex
+++ b/doc/proyectdoc/tex/3_Conceptos_teoricos.tex
@@ -1,8 +1,6 @@
 \capitulo{3}{Conceptos teóricos}
 
-CITAR TFG CLAUDIA APARTADO CONCEPTOS TEORICOS PAG 6 A 13.
-
-NUEVO CONTENIDO ......
+Vamos a hablar de los conceptos teóricos aportando nueva información contando la información del tfg anterior de Claudia Martínez Herrero (pag. 6-13, año 2017) \cite{claudia}
 
 %\section{API Rest}\label{api-rest}
 
