--- a/doc/proyectdoc/tex/5_Aspectos_relevantes_del_desarrollo_del_proyecto.tex
+++ b/doc/proyectdoc/tex/5_Aspectos_relevantes_del_desarrollo_del_proyecto.tex
@@ -1,7 +1,233 @@
 \capitulo{5}{Aspectos relevantes del desarrollo del proyecto}
 
-Este apartado pretende recoger los aspectos más interesantes del desarrollo del proyecto, comentados por los autores del mismo.
-Debe incluir desde la exposición del ciclo de vida utilizado, hasta los detalles de mayor relevancia de las fases de análisis, diseño e implementación.
-Se busca que no sea una mera operación de copiar y pegar diagramas y extractos del código fuente, sino que realmente se justifiquen los caminos de solución que se han tomado, especialmente aquellos que no sean triviales.
-Puede ser el lugar más adecuado para documentar los aspectos más interesantes del diseño y de la implementación, con un mayor hincapié en aspectos tales como el tipo de arquitectura elegido, los índices de las tablas de la base de datos, normalización y desnormalización, distribución en ficheros3, reglas de negocio dentro de las bases de datos (EDVHV GH GDWRV DFWLYDV), aspectos de desarrollo relacionados con el WWW...
-Este apartado, debe convertirse en el resumen de la experiencia práctica del proyecto, y por sí mismo justifica que la memoria se convierta en un documento útil, fuente de referencia para los autores, los tutores y futuros alumnos.
+Este apartado pretende recoger los aspectos más interesantes del desarrollo del proyecto, asi como las decisiones tomadas y su repercusión.
+
+\section{Inicio del proyecto}\label{inicio-del-proyecto}
+
+El proyecto comenzó el 3 de octubre del 2017. La idea surgió de un tfg anterior el de Claudia Martínez Herrero \cite{claudia} en el cual se iniciaba sesión en ubu-virtual y tenia que sacar con gráficas las notas de los diferentes alumnos. Al tutor Raúl Marticorena Sánchez, se le ocurrió dar una vuelta a esa idea y partiendo de ese tfg, queríamos sacar las estadísticas de las interacciones de los diferentes usuarios de ubu-virtual en una asignatura concreta para poder mostrarlo al profesor de forma mas amigable.
+
+\imagen{logo}{Logo UBULog.}
+
+\section{Metodologías}\label{metodologias-proyecto}
+
+En la primera reunión se decidió trabajar con metodologías ágiles, en concreto Scrum. Durante el proyecto se han llevado a cabo reuniones semanales con el tutor (\emph{sprints}) y según se iban terminando las tareas (\emph{issue}) se sincronizaba con el repositorio, lo que conlleva, que el tutor y el alumno tuvieran siempre el mismo código y se pudieran solucionar los problemas de forma rápida.
+
+\section{Formación}\label{formacion}
+
+Algunas tecnologías utilizadas en el proyecto requerían formación antes de empezar a trabajar con ellas.
+
+\begin{itemize}
+	\tightlist
+	\item
+	Aplicación UBUGrades, se tubo que probar y refactorizar el código para facilitar su lectura y saber que partes nos valían y cuales podríamos desechar.
+	\item
+	Libreria common-csv-1.5, se investigo su javaDoc para saber si nos podia parsear nuestros documentos.
+	\item
+	Liberia HtmlUnit, Se tubo que investigar la librería y hacer diferentes pruebas antes de su implementación
+	\item
+	Liberia Calendar, se investigo su javaDoc antes de empezar con la implementación, en un primer momento nu funciono y se tubo que analizar el código debugeando, se vio que el javaDoc estaba mal documentado y se vio como utilizar esta librería de forma correcta.
+	\item
+	Liberia chart.js, se miro la documentación \cite{javascript:chart} y y se analizo su código para su implementación.
+\end{itemize}
+
+\section{Decisiones técnicas}\label{decisiones-tecnicas}
+
+Este proyecto a sido una continuación parcial de proyecto de Claudia Martínez Herrero \cite{claudia} con lo cual en los puntos coincidentes, explicaremos las diferencias existentes y añadiremos nueva información.
+
+\subsection{Utilización de Moodle y sus servicios web}\label{utilizacióndemoodleysusserviciosweb}
+
+La única diferencia en este punto, es, que nosotros no hemos generado calificaciones, ya que nosotros no lo necesitamos, porque vamos a mirar las interacciones de los usuarios con el log que genera moodle (la descarga del log se explicara en la guiá de usuario).
+
+\subsection{Funciones utilizadas}\label{funciones-utilizadas}
+
+Nosotros hemos descartado algunas llamadas de las originales, ya que no las necesitamos.
+
+\begin{itemize}
+	\tightlist
+	\item
+	gradereport\_user\_get\_grades\_table.
+	\item
+	mod\_assign\_get\_assignments.
+	\item
+	mod\_quiz\_get\_quizzes\_by\_courses.
+\end{itemize}
+
+\subsection{Obtención del token de usuario}\label{obtención-del-token-de-usuario}
+
+No se aporta nada nuevo.
+
+\subsection{Extracción de datos en JSON}\label{extracción-de-datos-en-json}
+
+No se aporta nada nuevo.
+
+\subsection{Generar gráficos}\label{generar-graficos}
+
+Para generar los gráficos, ya que se ha optado por la librería chart.js que es de javaScript, necesitaremos un html para poder ejecutar ese java script y mostrarlo en la etiqueta HTML5 <canvas>. En un primer momento, se considero que el .html iría en resources y el .js que esta creado en tiempo de ejecución igual. Todo funcionaba de forma correcta hasta que se genero el .jar, dado que en el .jar no se puede escribir, nos empezó a dar excepciones de que ese archivo no existía, entonces optamos por generarlos en tiempo de ejecución todos los archivos. Así solucionamos los problemas de ejecución en el .jar.
+
+Cabe destacar que cuando se cierra la aplicación nos aseguramos de eliminar los archivos generados.
+
+A continuación explicaremos los métodos correspondientes para generar los gráficos.
+
+\subsubsection{Constructor}\label{constructor}
+
+Con el crearemos el objeto Chart.
+
+\imagen{chartconst}{Constructor Chart.}
+
+\subsubsection{HTML}\label{html}
+
+El html necesario para las gráficas, se genera en tiempo de ejecución. El método con el cual se genera es el siguiente.
+
+\imagen{charthtml}{Código HTML para el gráfico.}
+
+\subsubsection{CSS}\label{css}
+
+El css necesario para las gráficas, se genera en tiempo de ejecución. El método con el cual se genera es el siguiente.
+
+\imagen{chartcss}{Código CSS del gráfico.}
+
+\subsubsection{Utils.js}\label{utils}
+
+El javaScript necesario para generar gráficas, se genera en tiempo de ejecución. El método con el cual se genera es el siguiente.
+
+\imagen{chartutil}{Código utils.js necesario para el gráfico.}
+
+\subsubsection{chart.js}\label{chart-js}
+
+El javaScript necesario para las gráficas, se genera en tiempo de ejecución. El método con el cual se genera es el siguiente.
+
+\imagen{generategrafica}{Código chart general.js.}
+
+En este código lo que hacemos es poner la configuración del gráfico, el tipo, y los datos. Las fechas las insertamos en este método, para insertar los datos que mostrar las gráficas llamamos al metodo setDataSetJavaScript pasandole el objeto printerWriter, el código es el siguiente.
+
+\imagen{setdatasetjavascript}{Código chart datos.js.}
+
+En este código generamos tantos dataset como tengamos ya almacenamos con el numero de interacciones correspondientes. Para obtener estos datos el método que almacena los datos es el siguiente.
+
+\imagen{setlabel1}{Código que obtiene datos para el gráfico 1.}
+\imagen{setlabel2}{Código que obtiene datos para el gráfico 2.}
+
+Este método tiene 3 condiciones principales, si solo a seleccionado participantes, si solo a seleccionado eventos o si selecciona ambas.
+
+en la condición mas compleja, que es seleccionar ambas, lo que ocurre, es:
+
+\begin{itemize}
+	\tightlist
+	\item
+	Iteramos cada participante seleccionado.
+	\item
+	Con cada participante seleccionado iteramos cada evento seleccionado.
+	\item
+	Con cada evento seleccionado iteramos cada set de fechas de los log.
+	\item
+	Con cada set de fechas de los log iteramos cada uno de los logs.
+	\item
+	Si el mes y el año, el evento y participante corresponde con el log incrementamos el contador, si no, no. Almacenamos los valores en una lista para saber el numero de veces que un participante, en un evento concreto, en esa fecha.
+\end{itemize}
+
+\subsection{Generar tabla logs}\label{generar-tabla-log}
+ 
+ En esta parte podremos ver la información concreta de los log, se implementaron unos filtros con los cuales podremos desgranar mas el log y volver a generar una gráfica mas especifica con los datos resultantes de la tabla.
+ 
+ Cabe destacar que cuando se cierra la aplicación nos aseguramos de eliminar los archivos generados.
+ 
+ Con este html tenemos el mismo problema que en la generación de gráficas en la ejecución de .jar, con lo cual lo generamos en tiempo de ejecución de la misma manera.
+ 
+\subsubsection{HTML}\label{html-tabla-log}
+ 
+\imagen{generartablalog}{Código que genera la tabla log 1.}
+\imagen{datatablelog}{Código que genera la tabla log 2.}
+
+Creamos las cabeceras y una vez hecho eso recorremos cada log para obtener sus datos y poder crear la tabla completa.
+
+\subsection{Web Scripting}\label{web-scripting}
+
+Con web scripting lo que queremos conseguir es la automatización de la descarga de logs.
+
+Hemos observado que con la descarga de logs considerablemente grandes(con 20.000 instancias) el tiempo se incrementa considerablemente, es muchísimo mas rápido la descarga manual del log. Se ha observado, que si se intenta descargar con una conexión wifi, la aplicación puede llegar a colgarse de tal manera que haya que hacer un kill.
+
+Hablaremos del código el las siguientes sub-secciones.
+
+\subsubsection{Constructor}\label{constructor}
+
+En el cargaremos la web de ubu virtual y iniciaremos sesión.
+
+\imagen{webconst}{Constructor web scripting.}
+
+\subsubsection{Responsive Web}\label{responsive-web}
+
+Una vez iniciado sesión cargamos la url correspondiente con todos los log, sin ningún tipo de filtro, del curso en el que estamos.
+
+Recogemos la respuesta que nos da al hacer click en el input de descarga y guardamos la respuesta en un csv temporal.
+
+El código correspondiente es el siguiente.
+
+\imagen{webdown}{Constructor web scripting.}
+
+
+\subsection{Decisiones en cuanto a la interfaz}\label{decisiones-en-cuanto-a-la-interfaz}
+
+El proyecto a partido del diseño del tfg de Claudia Martínez Herrero \cite{claudia} con algunas modificaciones.
+
+\subsection{Ventana de bienvenida}\label{ventana-de-bienvenida}
+
+No se aporta nada nuevo.
+
+\subsection{Barra de progreso}\label{barra-de-progreso}
+
+No se aporta nada nuevo.
+
+\subsection{Ventana de principal}\label{ventana-de-principal}
+
+Esta ventana, se ha tenido que crear desde 0, porque no se re-dimensionaba de forma correcta, aunque se ha seguido el diseño que ya estaba, se ha cambiado botones y añadido funcionalidades nuevas, al igual que se han suprimido otras. 
+
+el resultado es el siguiente.
+
+\imagen{aplicacionp}{Ventana de principal UBULog.}
+
+El primer cambio importante que se observa, es que, si no se tiene un log cargado, los filtros, las selecciones de eventos y participantes quedan deshabilitadas hasta que se carga e log.
+
+Se añade la foto del profesor que ha iniciado sesión.
+
+Nuevos botones para la carga de log cuando se tiene el registro almacenado en local o si se quiere descargar de forma automática.
+
+Un nuevo botón para generar el gráfico con referencia a los resultados de la tabla de logs.
+
+\subsubsection{Gráfica logs}\label{grafica-logs}
+
+Una vez tengamos el log cargado, podremos seleccionar eventos y participantes, el resultado seria el siguiente.
+
+\imagen{aplicacionchart}{Vista de gráfica.}
+
+En la gráfica podemos ver en la leyenda las combinaciones seleccionadas, y el el gráfico los resultados. Si no vemos bien en numero de interacciones en el gráfico a simple vista, podremos ir con el ratón, colocarnos encima de la barra deseada y nos dará la información correspondiente.
+
+Si deseamos cambiar el tipo de gráfico podremos pinchar en el selector de la gráfica y seleccionar uno diferente.
+
+\subsubsection{Tabla logs}\label{tabla-logs}
+
+Una vez tengamos el log cargado, podremos seleccionar eventos y participantes, el resultado seria el siguiente en la tabla de logs.
+
+\imagen{aplicaciontable}{Vista tabla de logs.}
+
+En la tabla de logs, podremos ver los log de forma individual, con sus características.
+
+En esta tabla, proporcionamos unos filtros, de los cuales, cada uno corresponde con una columna de la tabla. En el caso de que queramos ver los log mas desgranados, podremos filtrarlos y cuando muestre el resultado pinchar en el botón generar gráfica a partir de datos de tabla y nos mostrara los datos en la gráfica resultantes.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
