--- a/doc/proyectdoc/tex/7_Conclusiones_Lineas_de_trabajo_futuras.tex
+++ b/doc/proyectdoc/tex/7_Conclusiones_Lineas_de_trabajo_futuras.tex
@@ -1,4 +1,44 @@
 \capitulo{7}{Conclusiones y Líneas de trabajo futuras}
 
-Todo proyecto debe incluir las conclusiones que se derivan de su desarrollo. Éstas pueden ser de diferente índole, dependiendo de la tipología del proyecto, pero normalmente van a estar presentes un conjunto de conclusiones relacionadas con los resultados del proyecto y un conjunto de conclusiones técnicas. 
-Además, resulta muy útil realizar un informe crítico indicando cómo se puede mejorar el proyecto, o cómo se puede continuar trabajando en la línea del proyecto realizado. 
+En esta ultima sección expondremos las conclusiones del trabajo realizado y las lineas futuras que se podrán seguir.
+
+\section{Conclusiones}\label{conclusiones}
+
+En la finalización del proyecto podemos sacar las siguientes conclusiones.
+
+\begin{itemize}
+	\tightlist
+	\item
+	El objetivo general del proyecto se ha cumplido satisfactoriamente.
+	Ahora los profesores cuentan con una aplicación para poder ver las interacciones de los diferentes usuarios, y hacer comprobaciones entre equipos de alumnos para saber quien a interaccionado con ubu-virtual y quien no, para tener un análisis mas detallado.
+	\item
+	El proyecto a sido desarrollado con un claro pensamiento de mantenibilidad. Esto ha conllevado que al hacer algún cambio de implementación, el tiempo invertido en ello era mínimo. Esta ultima consideración esta ligada también a una nueva implementación.
+	\item
+	Se a observado la importancia de las herramientas como travis o sonarqube para el desarrollo.
+	\item
+	El editor de \LaTeX\ ha sido de gran ayuda en la documentación, aunque se este mas acostumbrado a word o writer, a sido bueno el aprendizaje de esta tecnología para futuros usos en las empresas privadas.
+	\item
+	Hay que tener cuidado con la documentación que existe en internet, aunque sea la oficial, en alguna librería utilizada la documentación conducía a errores de implementación y hay que observar el propio código.
+	\item
+	Al utilizar la metodología ágil scrum, se ha desarrollado el proyecto de la forma mas profesional posible, sufriendo la presión de las entregas, lo que sera habitual en el entorno laboral.
+	\item
+	Es complicado la calcular la duración de los issue, se puede decir, que he sido optimista en el calculo, excepto en un par de issue los demás se finalizaban antes de lo esperado.
+	
+\end{itemize}
+
+\section{Líneas de trabajo futuras}\label{luxedneas-de-trabajo-futuras}
+
+\begin{itemize}
+	\tightlist
+	\item
+	Buscar funciones de la API Web Service de moodle para dar información mas concreta al usuario, diciéndole, por ejemplo, información concreta de cuestionarios, preguntas, contenido, etc... .
+	\item
+	Investigar la mejora de tiempos del Web Scripting o incluso buscar una libreria mejor para este proceso. El tiempo que tarda en descargar los log es muy grande y cuanto mas grande es el log aumenta, de tal forma, que puede llegar a bloquear la aplicación.
+	\item
+	Como en los log tenemos la ip por donde se han conectado a ubu-virtual, podríamos hacer estadísticas de por donde se conectan las personas o incluso hacer minería con estos datos para saber cuando se conectan mas.
+	\item
+	Añadir mas tipos de gráficos. Hemos metido 3, pero convendría poner mas tipos ya que hay muchos tipos de usuarios y para diferentes datos habrá gustos diferentes de gráficos.
+	\item
+	Al descargar el log, hay unos select que nos permite elegir ciertas opciones para filtrar los log y después descargar esos log. Habría que implementar para que el usuario se pueda descargar el log automáticamente modificando esas opciones.
+	
+\end{itemize}
