--- a/doc/proyectdoc/tex/7_Conclusiones_Lineas_de_trabajo_futuras.tex
+++ b/doc/proyectdoc/tex/7_Conclusiones_Lineas_de_trabajo_futuras.tex
@@ -40,5 +40,7 @@ En la finalización del proyecto podemos sacar las siguientes conclusiones.
 	Añadir mas tipos de gráficos. Hemos metido 3, pero convendría poner mas tipos ya que hay muchos tipos de usuarios y para diferentes datos habrá gustos diferentes de gráficos.
 	\item
 	Al descargar el log, hay unos select que nos permite elegir ciertas opciones para filtrar los log y después descargar esos log. Habría que implementar para que el usuario se pueda descargar el log automáticamente modificando esas opciones.
+	\item
+	Implementar traducciones para tener una aplicación en diferentes idiomas.
 	
 \end{itemize}
